1、主体框架基本搭建成功，还有很多细节需要完善

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,17 @@
         android:layout_toRightOf="@id/btnLoad"
         android:text="跳转到UserActivity" />
 
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnLoad"
+        android:text="去登录" />
+
     <FrameLayout
         android:id="@+id/flContainer"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_below="@id/btnLoad" />
+        android:layout_below="@id/btnLogin" />
 
 </RelativeLayout>
