--- a/basicres/src/main/res/values/styles.xml
+++ b/basicres/src/main/res/values/styles.xml
@@ -9,4 +9,17 @@
         <item name="android:windowIsTranslucent">false</item>
         <item name="android:background">@android:color/transparent</item>
     </style>
+
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="actionBarSize">@dimen/res_action_bar_height</item>
+        <item name="android:windowAnimationStyle">@style/activityAnimation</item>
+    </style>
+
+    <!-- animation 样式 -->
+    <style name="activityAnimation" parent="@android:style/Animation">
+        <item name="android:activityOpenEnterAnimation">@anim/slide_right_in</item>
+        <item name="android:activityOpenExitAnimation">@anim/slide_left_out</item>
+        <item name="android:activityCloseEnterAnimation">@anim/slide_left_in</item>
+        <item name="android:activityCloseExitAnimation">@anim/slide_right_out</item>
+    </style>
 </resources>
