--- a/user/src/main/res/layout/user_fragment_user.xml
+++ b/user/src/main/res/layout/user_fragment_user.xml
@@ -3,60 +3,98 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="20dp"
-    android:paddingTop="20dp">
-
-    <TextView
-        android:id="@+id/tvNameTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="用户姓名：" />
-
-    <TextView
-        android:id="@+id/tvName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/tvNameTitle"
-        tools:text="user_zf" />
-
-    <TextView
-        android:id="@+id/tvAgeTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvNameTitle"
-        android:layout_marginTop="10dp"
-        android:text="用户年龄：" />
-
-    <TextView
-        android:id="@+id/tvAge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/tvAgeTitle"
-        android:layout_toRightOf="@id/tvAgeTitle"
-        tools:text="26" />
-
-    <TextView
-        android:id="@+id/tvHobbyTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvAgeTitle"
-        android:layout_marginTop="10dp"
-        android:text="用户兴趣：" />
-
-    <TextView
-        android:id="@+id/tvHobby"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/tvHobbyTitle"
-        android:layout_toRightOf="@id/tvHobbyTitle"
-        tools:text="跑步、羽毛球" />
+    android:paddingLeft="30dp"
+    android:paddingTop="50dp">
 
     <Button
-        android:id="@+id/tvGotoMain"
+        android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvHobbyTitle"
-        android:layout_marginTop="10dp"
-        android:text="回到主页" />
+        android:text="登录"
+        android:visibility="gone" />
 
+    <RelativeLayout
+        android:id="@+id/rlInfo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <TextView
+            android:id="@+id/tvNameTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="用户昵称：" />
+
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/tvNameTitle"
+            tools:text="user_zf" />
+
+        <TextView
+            android:id="@+id/tvIdTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvNameTitle"
+            android:layout_marginTop="10dp"
+            android:text="用户 I   D：" />
+
+        <TextView
+            android:id="@+id/tvId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/tvIdTitle"
+            android:layout_toRightOf="@id/tvIdTitle"
+            tools:text="xxxx" />
+
+        <TextView
+            android:id="@+id/tvPhoneTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvIdTitle"
+            android:layout_marginTop="10dp"
+            android:text="手机号码：" />
+
+        <TextView
+            android:id="@+id/tvPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/tvPhoneTitle"
+            android:layout_toRightOf="@id/tvPhoneTitle"
+            tools:text="18664937265" />
+
+        <TextView
+            android:id="@+id/tvEmailTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvPhoneTitle"
+            android:layout_marginTop="10dp"
+            android:text="用户邮箱：" />
+
+        <TextView
+            android:id="@+id/tvEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/tvEmailTitle"
+            android:layout_toRightOf="@id/tvEmailTitle"
+            tools:text="xxxx@qq.com" />
+
+        <TextView
+            android:id="@+id/tvAvatarTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvEmailTitle"
+            android:layout_marginTop="10dp"
+            android:text="用户头像：" />
+
+        <ImageView
+            android:id="@+id/ivAvatar"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_alignTop="@id/tvAvatarTitle"
+            android:layout_toRightOf="@id/tvAvatarTitle"
+            tools:src="@drawable/ic_launcher_background" />
+    </RelativeLayout>
 </RelativeLayout>
