继续添加部分基础功能，整体框架基本成型

--- a/basicres/src/main/res/layout/page_state_view.xml
+++ b/basicres/src/main/res/layout/page_state_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<basic.app.com.basicres.view.PageStateView xmlns:android="http://schemas.android.com/apk/res/android"
+<basic.app.com.basicres.widget.PageStateView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/skin_pageStateView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"/>
