--- a/user/src/main/res/layout/user_fragment_user.xml
+++ b/user/src/main/res/layout/user_fragment_user.xml
@@ -2,9 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="30dp"
-    android:paddingTop="50dp">
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/btnLogin"
@@ -20,81 +18,117 @@
         android:visibility="gone"
         tools:visibility="visible">
 
-        <TextView
-            android:id="@+id/tvNameTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="用户昵称：" />
+        <ImageView
+            android:id="@+id/ivAvatar"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            tools:src="@drawable/ic_launcher_background" />
 
         <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/tvNameTitle"
+            android:layout_below="@id/ivAvatar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/ui_text_2"
+            android:textSize="22dp"
             tools:text="user_zf" />
 
         <TextView
             android:id="@+id/tvIdTitle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tvNameTitle"
-            android:layout_marginTop="10dp"
-            android:text="用户 I   D：" />
+            android:layout_height="49dp"
+            android:layout_below="@id/tvName"
+            android:layout_marginLeft="17dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="用户ID"
+            android:textColor="@color/ui_text_3"
+            android:textSize="16dp" />
 
         <TextView
             android:id="@+id/tvId"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="49dp"
+            android:layout_alignParentRight="true"
             android:layout_alignTop="@id/tvIdTitle"
-            android:layout_toRightOf="@id/tvIdTitle"
+            android:layout_marginRight="15dp"
+            android:gravity="center_vertical|right"
+            android:textColor="@color/ui_text_2"
+            android:textSize="16dp"
             tools:text="xxxx" />
+
+        <View
+            android:id="@+id/vDivider1"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_below="@id/tvIdTitle"
+            android:background="@color/ui_divider_primary" />
 
         <TextView
             android:id="@+id/tvPhoneTitle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tvIdTitle"
+            android:layout_height="49dp"
+            android:layout_below="@id/vDivider1"
+            android:layout_marginLeft="17dp"
             android:layout_marginTop="10dp"
-            android:text="手机号码：" />
+            android:gravity="center_vertical"
+            android:text="手机号码："
+            android:textColor="@color/ui_text_3"
+            android:textSize="16dp" />
 
         <TextView
             android:id="@+id/tvPhone"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="49dp"
+            android:layout_alignParentRight="true"
             android:layout_alignTop="@id/tvPhoneTitle"
-            android:layout_toRightOf="@id/tvPhoneTitle"
+            android:layout_marginRight="15dp"
+            android:gravity="center_vertical"
+            android:textColor="@color/ui_text_2"
+            android:textSize="16dp"
             tools:text="18664937265" />
+
+        <View
+            android:id="@+id/vDivider2"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_below="@id/tvPhoneTitle"
+            android:background="@color/ui_divider_primary" />
 
         <TextView
             android:id="@+id/tvEmailTitle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tvPhoneTitle"
+            android:layout_height="49dp"
+            android:layout_below="@id/vDivider2"
+            android:layout_marginLeft="17dp"
             android:layout_marginTop="10dp"
-            android:text="用户邮箱：" />
+            android:gravity="center_vertical"
+            android:text="用户邮箱："
+            android:textColor="@color/ui_text_3"
+            android:textSize="16dp" />
 
         <TextView
             android:id="@+id/tvEmail"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="49dp"
+            android:layout_alignParentRight="true"
             android:layout_alignTop="@id/tvEmailTitle"
-            android:layout_toRightOf="@id/tvEmailTitle"
+            android:layout_marginRight="15dp"
+            android:gravity="center_vertical"
+            android:textColor="@color/ui_text_2"
+            android:textSize="16dp"
             tools:text="xxxx@qq.com" />
 
-        <TextView
-            android:id="@+id/tvAvatarTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <View
+            android:id="@+id/vDivider3"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
             android:layout_below="@id/tvEmailTitle"
-            android:layout_marginTop="10dp"
-            android:text="用户头像：" />
+            android:background="@color/ui_divider_primary" />
 
-        <ImageView
-            android:id="@+id/ivAvatar"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-            android:layout_alignTop="@id/tvAvatarTitle"
-            android:layout_toRightOf="@id/tvAvatarTitle"
-            tools:src="@drawable/ic_launcher_background" />
     </RelativeLayout>
 </RelativeLayout>
